<resources>
    <string name="app_name">SmartHome v1.0</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_option">Options</string>
    <string name="loginText">Login</string>
    <string name="title_activity_control">Control</string>
    <string name="listCardsButton">List Cards</string>
    <string name="controlButtonText">Control</string>
    <string name="environMentalButtonText">Environmental</string>
    <string name="logoutButtonText">logout</string>
    <string name="upText">up</string>
    <string name="rightText">up</string>
    <string name="downText">up</string>
    <string name="leftText">up</string>
    <string name="tagText">up</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_options">Options</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_environment">Environment</string>
    <string name="title_activity_graph">Environmental Sensor Data</string>
    <string name="title_activity_list_cards">ListCardsActivity</string>
    <string name="title_activity_preference_data_class">PreferenceDataClass</string>


</resources>
